--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bubbler+One&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/Assets/Logo.png">
+    <link rel="icon" type="image/x-icon" href="/img/Logo.png">
 </head>
 
 <body>
 <h1>Hello Sree!!!</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
+
 </html>
