--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 </head>
 
 <body>
-<h1>Hello Sree!!!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="wrapper">
+        <div><script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.26/build/spline-viewer.js"></script>
+            <spline-viewer url="https://prod.spline.design/GEz5kNtxz8M9Va1q/scene.splinecode"></spline-viewer>
+        </div>
+        <div>
+            <h1>Hello Sree!!!</h1>
+            <p>I'm hosted with GitHub Pages.</p>
+        </div>
+      </div>
+
 </body>
 
 </html>
