--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
 <body>
     <div class="wrapper">
-        <div><script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.26/build/spline-viewer.js"></script>
-            <spline-viewer url="https://prod.spline.design/GEz5kNtxz8M9Va1q/scene.splinecode"></spline-viewer>
+        <div>
+            <img src="img/me.svg", width="100%">
         </div>
         <div>
-            <h1>Hello Sree!!!</h1>
-            <p>I'm hosted with GitHub Pages.</p>
+            <h1>Hey, I'm Sree!</h1>
+            <p>I'm a UX designer.</p>
+            <p>I'm a coder.</p>
+            <p>I'm a problem solver.</p>
         </div>
       </div>
 
