--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bubbler+One&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.svg">
 </head>
 
 <body>
+    <nav class="navbar"></nav>
+        <ul class="nav-list">
+            <li><img src="img/logo.svg" height="40rem"></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <div class="wrapper">
         <div>
             <img src="img/me.svg", width="100%">
