--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="wrapper">
         <div>
-            <img src="img/me.svg", width="100%">
+            <img src="img/head.svg", width="100%">
         </div>
         <div>
             <h1>Hey, I'm Sree!</h1>
