--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Sree Kariyadan ┋ UX Designer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
@@ -11,23 +12,18 @@
 </head>
 
 <body>
-    <nav class="navbar"></nav>
-        <ul class="nav-list">
-            <li><img src="img/logo.svg" height="40rem"></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    
     <div class="wrapper">
         <div>
             <img src="img/head.svg", width="100%">
         </div>
         <div>
-            <h1>Hey, I'm Sree!</h1>
-            <p>I'm a UX designer.</p>
-            <p>I'm a coder.</p>
-            <p>I'm a problem solver.</p>
+            <div class="introduction">
+                <h1>Hey, I'm Sree!</h1>
+                <p>I'm a UX designer.</p>
+                <p>I'm a coder.</p>
+                <p>I'm a problem solver.</p>
+            </div>
         </div>
       </div>
 
