--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Sree Kariyadan ┋ UX Designer</title>
-  <base href="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bubbler+One&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="img/logo.svg" />
 </head>
 <body>
   <app-root></app-root>
